# kerneltest

./: .gitignore  .pre-commit-config.yaml  README.md  Vagrantfile  createdb.py  harness.py  pyproject.toml  runserver.py  setup.py  tox.ini
.github/workflows/: main.yml
devel/ansible/: kerneltest.yml
devel/ansible/roles/core/tasks/: main.yml
devel/ansible/roles/dev/files/: kerneltest.cfg  kerneltest.service
devel/ansible/roles/dev/tasks/: main.yml
devel/ansible/roles/oidc-register/defaults/: main.yml
fedmsg.d/: kerneltest.py
guests/: rootest.sh
kerneltest/: app.py  dbtools.py  default_config.py  messaging.py  proxy.py
kerneltest/alembic/: env.py
kerneltest/alembic/versions/: 02d7abf0710c_add_the_warn_status_to_test_results.py
kerneltest/templates/: master.html
tests/: __init__.py  client_secrets.json  conftest.py  test_app.py
