[tool.poetry]
name = "kerneltest"
version = "1.2.1"
description = "Kerneltests is the application storing the results of kernel tests submitted either by the Fedora kernel maintainer or Fedora contributors."

license = "MIT"

authors = [
  "Justin M. Forbes <jmforbes@linuxtx.org>",
  "Pierre-Yves Chibon <pingou@pingoured.fr>",
  "Fedora Infrastructure <admin@fedoraproject.org>",
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/fedora-infra/kerneltest"
homepage = "https://github.com/fedora-infra/kerneltest"

packages = [
    { include = "kerneltest" },
]

include = [
    { path = "tests/*", format = "sdist" },
]

classifiers = [
    "Environment :: Web Environment",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[tool.poetry.dependencies]
python = "^3.9.0"
flask-oidc = "^2.1.1"
flask = "^3.0.2"
flask-wtf = "^1.2.1"
alembic = "^1.13.1"
sqlalchemy = "^2.0.28"
toml = "^0.10.2"
six = "^1.16.0"
munch = "^4.0.0"
psycopg2 = "^2.9.9"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.0"
pytest-cov = ">=3.0.0"


[tool.black]
skip-string-normalization = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
