[tool.poetry]
name = "kerneltest"
version = "1.3.0"
description = "Kerneltests is the application storing the results of kernel tests submitted either by the Fedora kernel maintainer or Fedora contributors."

license = "MIT"

authors = [
  "Justin M. Forbes <jmforbes@linuxtx.org>",
  "Pierre-Yves Chibon <pingou@pingoured.fr>",
  "Fedora Infrastructure <admin@fedoraproject.org>",
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/fedora-infra/kerneltest"
homepage = "https://github.com/fedora-infra/kerneltest"

packages = [
    { include = "kerneltest" },
]

include = [
    { path = "tests/*", format = "sdist" },
]

classifiers = [
    "Environment :: Web Environment",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[tool.poetry.dependencies]
python = "^3.9.0"
flask-oidc = "^2.1.1"
flask = "^3.0.2"
flask-wtf = "^1.2.1"
alembic = "^1.13.1"
sqlalchemy = "^2.0.28"
toml = "^0.10.2"
six = "^1.16.0"
munch = "^4.0.0"
psycopg2 = "^2.9.9"
jinja2 = "^3.1.3"
gunicorn = "^21.2.0 || ^23.0.0"
kerneltest-messages = "^1.0.0"
backoff = "^2.2.1"
responses = "^0.25.0"
ruff = "^0.3.4 || ^0.4.0 || ^0.8.0 || ^0.9.0 || ^0.10.0 || ^0.11.0"
fedora-messaging = "^3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.0"
pytest-cov = ">=3.0.0"
coverage = "^7.4.4"
black = "^24.3.0 || ^25.0.0"
poetry = "^1.8.2"

[tool.poetry.extras]
deploy = ["gunicorn"]

[tool.coverage.run]
branch = true
source = [
    "kerneltest",
]

[tool.coverage.report]
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
omit = [
    "tests/*",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "F", "W", "I", "B", "UP"]
line-length = 100
target-version = "py39"
